<resources>
    <string name="app_name">BeModel</string>
    <string name="prompt_phone_number">电话号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="prompt_phone_number_register">电话号码</string>
    <string name="prompt_identifying_code_">验证码</string>
    <string name="get_verification_code_register">获取验证码</string>
    <string name="prompt_password_register">密码</string>
    <string name="man_register2">男</string>
    <string name="woman_register2">女</string>
    <string name="nickname_register2">昵称</string>
    <string name="prompt_describing_content">描述两句</string>
    <string name="add_voice">添加语音</string>
    <string name="location">所在位置</string>
    <string name="my_works">我的作品</string>
    <string name="invite_friends">邀请好友</string>
    <string name="feedback">意见反馈</string>
    <string name="set_up_gesture_cipher">设置手势密码</string>
    <string name="log_off">退出登录</string>
    <string name="comment">评论</string>
    <string name="private_chat">私聊</string>
    <string name="action_issuance">发布</string>
    <string name="action_review_content">评论</string>
    <string name="model_cicle_left_button">全部</string>
    <string name="upload_work_right_button">上传</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="locations">位置</string>
    <string name="phone">电话</string>
    <string name="longclick_speak">按住说话</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="action_settings">Settings</string>
    <string name="add_avator">头像</string>
    <string name="Back">返回</string>
    <string name="More">更多</string>
    <string name="title">标题</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="tips">提示</string>
    <string name="snap_load_fail">加载失败，请重试</string>
    <string name="retry">重试</string>
    <string name="UploadWorksFragment_rightButton_text">上传</string>
    <string name="UploadWorksFragment_textView_title">上传作品</string>
    <string name="PersonalCenterFragment_title_text">个人中心</string>
    <string name="MessagesFragment_tvTitle_text">消息</string>
</resources>
