<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.bemodel.com.bemodel.view.PersonalCenterActivity">

    <LinearLayout
        android:id="@+id/ll_logging_status"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/ll_logging_status"
        android:background="@android:color/dim_foreground_dark"
        android:layout_toRightOf="@+id/ll_logging_status" />

    <RelativeLayout
        android:id="@+id/rl_my_works"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/my_works" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rl_my_works"
        android:background="@android:color/dim_foreground_dark"
        android:layout_toRightOf="@+id/rl_my_works" />

    <RelativeLayout
        android:id="@+id/rl_invite_friends"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_friends"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rl_invite_friends"
        android:background="@android:color/dim_foreground_dark"
        android:layout_toRightOf="@+id/rl_invite_friends" />

    <RelativeLayout
        android:id="@+id/rl_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rl_feedback"
        android:background="@android:color/dim_foreground_dark"
        android:layout_toRightOf="@+id/rl_feedback" />

    <RelativeLayout
        android:id="@+id/rl_gesture_cipher"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_up_gesture_cipher"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rl_gesture_cipher"
        android:background="@android:color/dim_foreground_dark"
        android:layout_toRightOf="@+id/rl_gesture_cipher" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/log_off"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:background="@drawable/shape" />

</LinearLayout>
