<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="android.bemodel.com.bemodel.view.Register2Activity">

    <ImageView
        android:id="@+id/iv_head_sculpture_register2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_man_register2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man_register2"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"/>

            <Switch
                android:id="@+id/sw_sex_select_register2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tv_woman_register2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman_register2"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" >

            <EditText
                android:id="@+id/et_nickname_register2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname_register2"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edit_bg" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>
