<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/my_title_bar"
        android:id="@+id/title_bar"/>

    <LinearLayout
        android:id="@+id/ll_logging_status"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_profile_image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/headpic"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="22dp"
            android:text="所谓伊人"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/ll_logging_status"
        android:background="@color/colorDark"
        android:layout_toRightOf="@+id/ll_logging_status" />

    <RelativeLayout
        android:id="@+id/rl_my_works"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:id="@+id/tv_my_works"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/my_works" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rl_my_works"
        android:background="@color/colorDark"
        android:layout_toRightOf="@+id/rl_my_works" />

    <RelativeLayout
        android:id="@+id/rl_invite_friends"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:id="@+id/tv_invite_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_friends"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rl_invite_friends"
        android:background="@color/colorDark"
        android:layout_toRightOf="@+id/rl_invite_friends" />

    <RelativeLayout
        android:id="@+id/rl_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rl_feedback"
        android:background="@color/colorDark"
        android:layout_toRightOf="@+id/rl_feedback" />

    <RelativeLayout
        android:id="@+id/rl_gesture_cipher"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:id="@+id/tv_gesture_cipher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_up_gesture_cipher"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rl_gesture_cipher"
        android:background="@color/colorDark"
        android:layout_toRightOf="@+id/rl_gesture_cipher" />

    <Button
        android:id="@+id/btn_login_or_logoff"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:background="@drawable/shape" />

</LinearLayout>
