<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.bemodel.com.bemodel.view.UploadWorksFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >

        <Button
            android:id="@+id/bt_upload"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/et_content_uw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/prompt_describing_content"
            android:background="@drawable/edit_bg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/et_content_uw"
            android:background="@color/colorDark"
            android:layout_toRightOf="@+id/et_content_uw" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bt_add_voice_uw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_voice"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/rl_voice"
                android:background="@color/colorDark"
                android:layout_toRightOf="@+id/rl_voice" />

            <RelativeLayout
                android:id="@+id/linearlayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/tv_my_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv_location"
                    android:layout_marginLeft="32dp"/>

                <Switch
                    android:id="@+id/sw_show_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/linearlayout"
                android:background="@color/colorDark"
                android:layout_toRightOf="@+id/linearlayout" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
